# VillageAI_War

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
configs/: buildings.yaml  combat.yaml  default.yaml  economy.yaml  map.yaml
configs/rewards/: bot_rewards.yaml  village_rewards.yaml
configs/training/: train_bots.yaml  train_bots_selfplay.yaml  train_joint.yaml  train_mappo_bots.yaml  train_unified.yaml  train_village.yaml  train_village_selfplay.yaml
scripts/: evaluate.py  optuna_tune_mappo.py  plot_tensorboard_scalars.py  run_game.py  run_training.py
src/village_ai_war/: __init__.py  config_load.py  exceptions.py
src/village_ai_war.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/village_ai_war/agents/: __init__.py  action_masker.py  bot_obs_builder.py  village_action_space.py  village_obs_builder.py
src/village_ai_war/env/: __init__.py  building_system.py  combat_system.py  economy_system.py  game_env.py  map_generator.py
src/village_ai_war/models/: __init__.py  mappo_actor.py  mappo_critic.py  mappo_layout.py  mappo_policy.py  role_conditioned_policy.py
src/village_ai_war/play/: __init__.py  human_controls.py  (+2 more)
tests/: test_action_masker.py  test_building_construction.py  test_combat_system.py  test_economy_system.py  test_game_state.py  test_mappo_baseline.py  test_mappo_episode_metrics_callback.py  test_pool_manager.py  test_render_import.py  test_reward_bot.py  test_reward_village.py  test_role_conditioned_policy.py  test_smoke_game_env.py  test_unified_training_smoke.py
(+30 files in other folders)
